force-app/main/default/objects/Participant__c/fields/LocationService__c.field-meta.xml
<CustomField>
    <fullName>LocationService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location/Service</label>
    <referenceTo>Location_Service__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>